# pixel-scope

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  index.html  vcpkg.json
.github/workflows/: release.yml
assets/icon/: pixelscope.icns
doc/: agent_playbook.md  agent_rules.md  architecture.md  current_focus.md  product_plan.md  product_spec.md  roadmap.md
packaging/: README.md
packaging/homebrew-tap/: PR_TEXT.md  README.md
packaging/homebrew-tap/Formula/: pixelscope.rb
packaging/homebrew/Formula/: pixelscope.rb
packaging/linux/: AppRun  install-appimage-desktop.sh  pixelscope.desktop
packaging/winget/: PR_TEXT.md  README.md  export.sh
packaging/winget/manifests/Woodknight/PixelScope/0.1.0/: Woodknight.PixelScope.installer.yaml  Woodknight.PixelScope.locale.en-US.yaml  Woodknight.PixelScope.yaml
src/: main.cpp  pixelscope.rc
src/core/: histogram.cpp  histogram.h  image.cpp  image.h  image_model.cpp  image_model.h  image_statistics.cpp  image_statistics.h  viewport.cpp  viewport.h
src/io/: binary_raw_loader.cpp  binary_raw_loader.h  dng_loader.cpp  dng_loader.h  file_dialog.cpp  file_dialog.h  file_dialog_macos.mm  image_loader.cpp  image_loader.h  metadata_loader.cpp  metadata_loader.h  tiff_loader.cpp  tiff_loader.h
src/platform/: runtime_paths.cpp  runtime_paths.h
src/render/: texture_cache.cpp  texture_cache.h
src/ui/: app.cpp  app.h
tests/: core_tests.cpp
tools/metadata_bridge/: Cargo.toml
tools/metadata_bridge/src/: main.rs
tools/rawloader_bridge/: Cargo.toml
tools/rawloader_bridge/src/: main.rs
